Splash Screen & Icon, Status Bar & Navigation Bar

--- a/fooiy/android/app/src/main/res/values/strings.xml
+++ b/fooiy/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">fooiy</string>
+    <string name="app_name">푸이</string>
     <string name="kakao_app_key">adeeb3a64a0ef610048dbcbe1010c07f</string>
 </resources>
